--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -378,6 +378,12 @@ button:hover, .button:hover {
   text-decoration: none;
   text-transform: uppercase;
 }
+@media (max-width: 1000px) {
+  .button-topnav {
+    text-transform: none;
+    font-size: 20px;
+  }
+}
 
 /* Home styles
 */
@@ -423,6 +429,14 @@ body {
 @media (max-width: 650px) {
   .home-header {
     padding: 120px 20px 50px;
+  }
+}
+@media (max-width: 700px) {
+  .home-header {
+    background: transparent url(../images/bgs/bg-mobile-hero.png) 50% 50% no-repeat;
+  }
+  .home-header p {
+    padding: 30px 0;
   }
 }
 
@@ -573,26 +587,29 @@ section {
 
 .home-video {
   position: relative;
-  min-height: 600px;
-  background-color: white;
-  z-index: 2;
+  padding-bottom: 56.25%;
+  padding-top: 25px;
+  height: 0;
 }
-@media (max-width: 770px) {
-  .home-video {
-    min-height: 760px;
-  }
+.home-video video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.home-video iframe, .home-video video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
 
 .home-video__container {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  width: 715px;
-  height: 500px;
-}
-.home-video__container video {
-  box-shadow: 1px 2px 40px 8px rgba(108, 73, 255, 0.2);
+  max-width: 715px;
+  margin: 0 auto;
 }
 
 .home-video__header {
@@ -620,9 +637,14 @@ section {
   font-size: 20px;
   padding: 30px 60px 30px 0;
 }
-@media (max-width: 770px) {
+@media (max-width: 1100px) {
   .social-media {
     padding: 40px 60px 50px 60px;
+  }
+}
+@media (max-width: 560px) {
+  .social-media {
+    padding: 40px 20px 50px;
   }
 }
 
@@ -645,6 +667,24 @@ section {
   font-size: 22px;
   padding-top: 140px;
 }
+@media (max-width: 840px) {
+  .social-media__col {
+    float: none;
+    width: auto;
+  }
+  .social-media__col p {
+    padding: 80px 0px;
+  }
+  .social-media__col:last-child {
+    width: 80%;
+    margin: 0 auto;
+  }
+}
+@media (max-width: 840px) and (max-width: 560px) {
+  .social-media__col:last-child {
+    width: auto;
+  }
+}
 
 .social-media__header {
   color: #000000;
@@ -660,11 +700,31 @@ section {
   left: 40px;
   width: 258px;
 }
+@media (max-width: 1050px) {
+  .social-media__infographic .cyclist {
+    bottom: -80px;
+    left: 0px;
+    width: 200px;
+  }
+}
 @media (max-width: 770px) {
   .social-media__infographic .cyclist {
     bottom: -85px;
     left: -30px;
     width: 66%;
+  }
+}
+@media (max-width: 840px) {
+  .social-media__infographic .cyclist {
+    bottom: 0;
+    left: 0;
+    width: 66%;
+    max-width: 190px;
+  }
+}
+@media (max-width: 560px) {
+  .social-media__infographic .cyclist {
+    bottom: -77px;
   }
 }
 
@@ -698,10 +758,9 @@ section {
   transform: translateY(-50%);
   left: 0px;
 }
-@media (max-width: 770px) {
+@media (max-width: 840px) {
   .social-media__tag.-leaks {
-    top: 47%;
-    left: -32px;
+    top: 145px;
   }
 }
 .social-media__tag.-brother {
@@ -709,10 +768,14 @@ section {
   left: 42%;
   top: 78px;
 }
-@media (max-width: 770px) {
+@media (max-width: 840px) {
   .social-media__tag.-brother {
-    left: 25%;
-    top: 62px;
+    top: 0;
+  }
+}
+@media (max-width: 560px) {
+  .social-media__tag.-brother {
+    left: 36px;
   }
 }
 .social-media__tag.-fakenews {
@@ -720,10 +783,14 @@ section {
   left: 52%;
   top: 58%;
 }
-@media (max-width: 770px) {
+@media (max-width: 840px) {
   .social-media__tag.-fakenews {
-    left: 44%;
-    top: 65%;
+    top: 200px;
+  }
+}
+@media (max-width: 560px) {
+  .social-media__tag.-fakenews {
+    left: 12%;
   }
 }
 
@@ -757,18 +824,30 @@ section {
   float: right;
   margin-right: 40px;
 }
-@media (max-width: 650px) {
+@media (max-width: 1000px) {
   .top-nav__menu {
     display: none;
+    float: none;
+    position: absolute;
+    top: 70px;
+    right: 10px;
+    width: 94%;
+    max-width: 400px;
+    background-color: white;
+    margin-right: 0;
+    padding: 10px 0;
+    border-radius: 10px;
+    box-shadow: 1px 1px 40px 1px rgba(0, 0, 0, 0.1);
+    box-sizing: border-box;
   }
 }
 
 .top-nav__item {
   position: relative;
-  margin-left: 25px;
+  margin-left: 20px;
   transition: all 0.2s;
   display: inline-block;
-  font-size: 14px;
+  font-size: 13px;
   color: #648350;
 }
 .top-nav__item .top-nav__link, .top-nav__item .language-selector__current {
@@ -793,20 +872,37 @@ section {
   visibility: visible;
   transform: scaleX(1);
 }
+@media (max-width: 1000px) {
+  .top-nav__item {
+    width: auto;
+    display: block;
+    text-align: right;
+    font-size: 20px;
+    margin-bottom: 10px;
+    margin-left: 0;
+    padding: 2px 20px;
+  }
+  .top-nav__item .top-nav__link, .top-nav__item .language-selector__current {
+    font-size: 20px;
+    text-transform: none;
+  }
+  .top-nav__item .top-nav__link:hover:before, .top-nav__item .top-nav__link:active:before, .top-nav__item .language-selector__current:hover:before, .top-nav__item .language-selector__current:active:before {
+    visibility: hidden !important;
+  }
+}
 
 .language-selector {
   position: relative;
   cursor: pointer;
   float: right;
 }
-@media (max-width: 650px) {
+@media (max-width: 1000px) {
   .language-selector {
     position: absolute;
-    right: 30px;
-    top: 20px;
+    top: 25px;
     font-size: 16px;
     width: 100%;
-    right: 0;
+    right: 68px;
     font-size: 18px;
     text-align: right;
   }
@@ -960,8 +1056,29 @@ section {
   }
 }
 
+.mobile-nav-toggle {
+  display: none;
+  position: absolute;
+  top: 27px;
+  right: 20px;
+  cursor: pointer;
+}
+.mobile-nav-toggle .-close {
+  display: none;
+}
+@media (max-width: 1000px) {
+  .mobile-nav-toggle {
+    display: block;
+  }
+}
+
 .home-parallax {
   transform: all 0.2s;
+}
+@media (max-width: 700px) {
+  .home-parallax {
+    display: none;
+  }
 }
 
 .home-parallax__mask {
@@ -971,6 +1088,11 @@ section {
   height: 300px;
   width: 100%;
   z-index: 5;
+}
+@media (max-width: 700px) {
+  .home-parallax__mask {
+    display: none;
+  }
 }
 
 .header-bg-1 {
@@ -1274,7 +1396,7 @@ section {
   margin: 0 auto;
 }
 .true-team h2 {
-  padding: 0 160px;
+  padding: 0 40px;
   font-size: 45px;
   text-align: center;
   color: #000000;
@@ -1282,6 +1404,11 @@ section {
 @media (max-width: 770px) {
   .true-team {
     padding: 120px 5px 200px 14px;
+  }
+}
+@media (max-width: 700px) {
+  .true-team {
+    padding: 120px 5px 20px 14px;
   }
 }
 
@@ -1364,6 +1491,7 @@ section {
   font-size: 12px;
   color: white;
   line-height: 1.2;
+  min-height: 82px;
 }
 .team-portraits__item--bio .-name {
   font-size: 17px;
@@ -1373,6 +1501,11 @@ section {
   font-size: 13px;
   color: #4B49FF;
 }
+.team-portraits__item--bio .-contact-icons {
+  position: absolute;
+  bottom: 5px;
+  left: 10px;
+}
 .team-portraits__item--bio .-contact-icons a {
   text-decoration: none;
 }
@@ -1380,7 +1513,7 @@ section {
 .team-portraits__item--image {
   position: relative;
   width: 100%;
-  height: 217px;
+  height: 196px;
   border-radius: 8px 8px 0 0;
 }
 .team-portraits__item--image.-bret {
@@ -1469,6 +1602,7 @@ section {
 /* Footer styles
 */
 .site-footer {
+  background: transparent url(../images/bgs/bg-main-footer.png) 50% 50% no-repeat;
   position: relative;
 }
 .site-footer h2 {
@@ -1479,10 +1613,20 @@ section {
 
 .site-footer__inner {
   text-align: center;
-  padding: 100px 160px 580px;
+  padding: 100px 160px 400px;
 }
 .site-footer__inner a {
   margin: 0 8px;
+}
+@media (max-width: 770px) {
+  .site-footer__inner {
+    padding: 100px 10px 300px;
+  }
+}
+@media (max-width: 600px) {
+  .site-footer__inner {
+    padding: 100px 10px 280px;
+  }
 }
 
 .site-footer__bg {
@@ -1549,6 +1693,11 @@ section {
   z-index: 100;
   padding: 0 160px 20px;
 }
+@media (max-width: 800px) {
+  .true-footer {
+    padding: 0 20px 20px;
+  }
+}
 
 .footer-social__item {
   transition: all .25s;
@@ -1557,10 +1706,23 @@ section {
 .footer-social__item:hover {
   opacity: 0.8;
 }
+@media (max-width: 600px) {
+  .footer-social__item {
+    margin-right: 10px;
+  }
+  .footer-social__item img {
+    width: 30px;
+  }
+}
 
 .footer-legal {
   position: relative;
   padding: 20px 0;
+}
+@media (max-width: 1080px) {
+  .footer-legal {
+    padding: 0;
+  }
 }
 
 .footer-app__links {
@@ -1570,6 +1732,11 @@ section {
 }
 .footer-app__links a {
   margin-left: 20px;
+}
+@media (max-width: 1080px) {
+  .footer-app__links {
+    display: none;
+  }
 }
 
 .footer-legal__links {
@@ -1599,6 +1766,23 @@ section {
 .footer-legal__links a:hover:before, .footer-legal__links a:active:before {
   visibility: visible;
   transform: scaleX(1);
+}
+@media (max-width: 1080px) {
+  .footer-legal__links {
+    text-align: center;
+  }
+}
+@media (max-width: 600px) {
+  .footer-legal__links a {
+    font-size: 12px;
+    margin-right: 15px;
+  }
+}
+
+@media (max-width: 1080px) {
+  .footer-social {
+    text-align: center;
+  }
 }
 
 .footer-copyright {
@@ -1631,7 +1815,7 @@ section {
 }
 @media (max-width: 952px) {
   .roadmap-header {
-    padding: 40px 60px 50px 60px;
+    padding: 40px 20px 50px 20px;
   }
 }
 
@@ -1870,6 +2054,11 @@ section {
     padding-top: 160px;
   }
 }
+@media (max-width: 700px) {
+  .home-features {
+    padding-top: 60px;
+  }
+}
 
 .home-main-features {
   padding: 140px 0;
@@ -1947,6 +2136,11 @@ section {
     width: 100%;
   }
 }
+@media (max-width: 700px) {
+  .features-item {
+    padding: 0 0;
+  }
+}
 
 .feature-item__header {
   font-size: 22px;
@@ -2014,6 +2208,11 @@ section {
   margin: 60px auto;
   max-width: 700px;
 }
+@media (max-width: 775px) {
+  .phone-carousel {
+    margin: 60px 10px 0;
+  }
+}
 
 .phone-1 {
   position: absolute;
@@ -2023,6 +2222,16 @@ section {
 }
 .phone-1 img {
   max-width: 218px;
+}
+@media (max-width: 775px) {
+  .phone-1 img {
+    max-width: 170px;
+  }
+}
+@media (max-width: 470px) {
+  .phone-1 img {
+    max-width: 130px;
+  }
 }
 
 .phone-5 {
@@ -2034,6 +2243,16 @@ section {
 .phone-5 img {
   max-width: 218px;
 }
+@media (max-width: 775px) {
+  .phone-5 img {
+    max-width: 170px;
+  }
+}
+@media (max-width: 470px) {
+  .phone-5 img {
+    max-width: 130px;
+  }
+}
 
 .phone-4 {
   position: absolute;
@@ -2043,6 +2262,16 @@ section {
 }
 .phone-4 img {
   max-width: 246px;
+}
+@media (max-width: 775px) {
+  .phone-4 img {
+    max-width: 184px;
+  }
+}
+@media (max-width: 470px) {
+  .phone-4 img {
+    max-width: 145px;
+  }
 }
 
 .phone-2 {
@@ -2054,6 +2283,16 @@ section {
 .phone-2 img {
   max-width: 246px;
 }
+@media (max-width: 775px) {
+  .phone-2 img {
+    max-width: 184px;
+  }
+}
+@media (max-width: 470px) {
+  .phone-2 img {
+    max-width: 145px;
+  }
+}
 
 .phone-3 {
   position: relative;
@@ -2062,6 +2301,16 @@ section {
 }
 .phone-3 img {
   max-width: 267px;
+}
+@media (max-width: 775px) {
+  .phone-3 img {
+    max-width: 200px;
+  }
+}
+@media (max-width: 470px) {
+  .phone-3 img {
+    max-width: 165px;
+  }
 }
 .phone-3.phone-bring-to-front {
   z-index: 100;
