--- a/src/sass/home.scss
+++ b/src/sass/home.scss
@@ -41,7 +41,12 @@ body {
         // min-height: 900px;
         padding: 120px 20px 50px;
     }
-
+    @media (max-width: 700px) {
+        background: transparent url(../images/bgs/bg-mobile-hero.png) 50% 50% no-repeat;
+        p {
+            padding: 30px 0;
+        }
+    }
 }
 
 .home-header__cta {
@@ -188,39 +193,57 @@ section {
 }
 
 .home-video {
-    position: relative;
-    min-height: 600px;
-    background-color: white;
-    z-index: 2;
-    @media (max-width: $breakpoint-tablet) {
-        min-height: 760px;
-    }
+    // position: relative;
+    // min-height: 600px;
+    // background-color: white;
+    // z-index: 2;
+    // @media (max-width: $breakpoint-tablet) {
+    //     min-height: 760px;
+    // }
+    // @media (max-width: 700px) {
+    //     min-height: 600px;
+    // }
 }
 
 .home-video {
-	// position: relative;
-	// padding-bottom: 56.25%; /* 16:9 */
-	// padding-top: 25px;
-	// height: 0;
+    position: relative;
+    padding-bottom: 56.25%;
+    padding-top: 25px;
+    height: 0;
+    video {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        //box-shadow: 1px 2px 40px 8px rgba(108, 73, 255, 0.2);
+    }
 }
 .home-video iframe, .home-video video {
-	// position: absolute;
-	// top: 0;
-	// left: 0;
-	// width: 100%;
-	// height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
 }
 
 .home-video__container {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
-    width: 715px;
-    height: 500px;
-    video {
-        box-shadow: 1px 2px 40px 8px rgba(108, 73, 255, 0.2);
-    }
+    max-width: 715px;
+    margin: 0 auto;
+    // position: absolute;
+    // top: 50%;
+    // left: 50%;
+    // transform: translate(-50%,-50%);
+    // width: 715px;
+    // height: 500px;
+    // video {
+    //     position: absolute;
+    //     top: 0;
+    //     left: 0;
+    //     width: 100%;
+    //     height: 100%;
+    //     //box-shadow: 1px 2px 40px 8px rgba(108, 73, 255, 0.2);
+    // }
 }
 
 .home-video__header {
@@ -247,13 +270,12 @@ section {
         font-size: 20px;
         padding: 30px 60px 30px 0;
     }
-    @media (max-width: $breakpoint-tablet) {
+    @media (max-width: 1100px) {
         padding: 40px 60px 50px 60px;
     }
-    // @media (max-width: 952px) {
-    //     // min-height: 900px;
-    //     padding: 40px 60px 50px 60px;
-    // }
+    @media (max-width: 560px) {
+        padding: 40px 20px 50px;
+    }
 }
 
 .social-media__row {
@@ -276,6 +298,20 @@ section {
         font-size: 22px;
         padding-top: 140px;
     }
+    @media (max-width: 840px) {
+       float: none;
+       width: auto;
+       p {
+           padding: 80px 0px;
+       }
+       &:last-child {
+            width: 80%;
+            margin: 0 auto;
+            @media (max-width: 560px) {
+                width: auto;
+            }
+        }
+    }
 }
 
 .social-media__header {
@@ -290,10 +326,24 @@ section {
         bottom: -80px;
         left: 40px;
         width: 258px;
+        @media (max-width: 1050px) {
+            bottom: -80px;
+            left: 0px;
+            width: 200px;
+        }
         @media (max-width: $breakpoint-tablet) {
             bottom: -85px;
             left: -30px;
             width: 66%;
+        }
+        @media (max-width: 840px) {
+            bottom: 0;
+            left: 0;
+            width: 66%;
+            max-width: 190px;
+        }
+        @media (max-width: 560px) {
+            bottom: -77px;
         }
     }
 }
@@ -326,27 +376,30 @@ section {
         top: 45%;
         transform: translateY(-50%);
         left: 0px;
-        @media (max-width: $breakpoint-tablet) {
-            top: 47%;
-            left: -32px;
+        @media (max-width: 840px) {
+            top: 145px;
         }
     }
     &.-brother {
         position: absolute;
         left: 42%;
         top: 78px;
-        @media (max-width: $breakpoint-tablet) {
-            left: 25%;
-            top: 62px;
+        @media (max-width: 840px) {
+            top: 0;
+         }
+         @media (max-width: 560px) {
+            left: 36px;
         }
     }
     &.-fakenews {
         position: absolute;
         left: 52%;
         top: 58%;
-        @media (max-width: $breakpoint-tablet) {
-            left: 44%;
-            top: 65%;
+        @media (max-width: 840px) {
+            top: 200px;
+        }
+        @media (max-width: 560px) {
+            left: 12%;
         }
     }
 }
