--- a/src/sass/parallaxer.scss
+++ b/src/sass/parallaxer.scss
@@ -2,6 +2,9 @@
 
 .home-parallax {
     transform: all 0.2s;
+    @media (max-width: 700px) {
+        display: none;
+    }
 }
 
 .home-parallax__mask {
@@ -11,6 +14,9 @@
     height: 300px;
     width: 100%;
     z-index: 5;
+    @media (max-width: 700px) {
+        display: none;
+    }
 }
 
 .header-bg-1 {
