--- a/src/sass/team.scss
+++ b/src/sass/team.scss
@@ -6,13 +6,16 @@
     box-sizing: border-box;
     margin: 0 auto;
     h2 {
-        padding: 0 160px;
+        padding: 0 40px;
         font-size: 45px;
         text-align: center;
         color: $color-alternate-header-font;
     }
     @media (max-width: $breakpoint-tablet) {
         padding: 120px 5px 200px 14px;
+    }
+    @media (max-width: 700px) {
+        padding: 120px 5px 20px 14px;
     }
 }
 
@@ -96,6 +99,7 @@
     font-size: 12px;
     color: white;
     line-height: 1.2;
+    min-height: 82px;
     .-name {
         font-size: 17px;
         color: $color-roadmap-font;
@@ -105,6 +109,9 @@
         color: $color-roadmap;
     }
     .-contact-icons {
+        position: absolute;
+        bottom: 5px;
+        left: 10px;
         a {
             text-decoration: none;
         }
@@ -114,7 +121,7 @@
 .team-portraits__item--image {
     position: relative;
     width: 100%;
-    height: 217px;
+    height: 196px;
     border-radius: 8px 8px 0 0;
     &.-bret {
         background: transparent url(../images/portraits/bret.jpg) 50% 50% no-repeat;
