--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -896,6 +896,13 @@ section {
   }
 }
 
+.flag {
+  width: 17px;
+  position: relative;
+  display: inline;
+  top: 2px;
+}
+
 .language-selector {
   position: relative;
   cursor: pointer;
@@ -1286,6 +1293,21 @@ section {
 
 /* News styles
 */
+.video-wrapper {
+  position: relative;
+  padding-bottom: 56.25%;
+  /* 16:9 */
+  padding-top: 25px;
+  height: 0;
+}
+.video-wrapper iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
 .true-news {
   background: transparent url(../images/bgs/bg-in-the-news.png) 50% 0 no-repeat;
   box-sizing: border-box;
@@ -1329,11 +1351,10 @@ section {
 
 .news-carousel__item--inner {
   position: relative;
-  height: 280px;
+  min-height: 100px;
   box-shadow: 1px 2px 20px -1px rgba(108, 73, 255, 0.4);
   border-radius: 12px;
   text-align: center;
-  padding: 20px 10px;
   background-color: white;
 }
 .news-carousel__item--inner img {
