--- a/src/sass/navigation.scss
+++ b/src/sass/navigation.scss
@@ -91,6 +91,13 @@
     }
 }
 
+.flag {
+    width: 17px;
+    position: relative;
+    display: inline;
+    top: 2px;
+}
+
 .language-selector {
     position: relative;
     cursor: pointer;
