--- a/src/sass/news.scss
+++ b/src/sass/news.scss
@@ -1,6 +1,20 @@
 /* News styles
 */
 
+.video-wrapper {
+	position: relative;
+	padding-bottom: 56.25%; /* 16:9 */
+	padding-top: 25px;
+    height: 0;
+    iframe {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+    }
+}
+
 .true-news {
     background: transparent url(../images/bgs/bg-in-the-news.png) 50% 0 no-repeat;  
     box-sizing: border-box;
@@ -44,11 +58,11 @@
 
 .news-carousel__item--inner {
     position: relative;
-    height: 280px;
+    min-height: 100px;
     box-shadow: 1px 2px 20px -1px rgba(108,73,255,0.4);
     border-radius: 12px;
     text-align: center;
-    padding: 20px 10px;
+    //padding: 20px 10px;
     background-color: white;
     img {
         max-width: 240px;
